plugins {
    id 'java'
    id 'checkstyle'
    id 'jacoco'
    id 'maven-publish'
    id 'signing'
    alias(libs.plugins.lombok)
    alias(libs.plugins.versioner)
    alias(libs.plugins.index.scan)
    alias(libs.plugins.owasp.dependencycheck)
}

group = 'com.github.nagyesta'

project.ext {
    gitToken = project.hasProperty('githubToken') ? (project.property('githubToken') as String) : ''
    gitUser = project.hasProperty('githubUser') ? (project.property('githubUser') as String) : ''
    ossrhUser = project.hasProperty('ossrhUsername') ? (project.property('ossrhUsername') as String) : ''
    ossrhPass = project.hasProperty('ossrhPassword') ? (project.property('ossrhPassword') as String) : ''
    ossIndexUser = project.hasProperty('ossIndexUsername') ? (project.property('ossIndexUsername') as String) : ''
    ossIndexPass = project.hasProperty('ossIndexPassword') ? (project.property('ossIndexPassword') as String) : ''
    artifactDisplayName = "Cache-Only"
    artifactDescription = "Cache-Only is a minimal library augmenting the Spring cache abstraction with a way for caching bulk API calls."
    repoUrl = 'https://github.com/nagyesta/cache-only'
    licenseName = 'MIT License'
    licenseUrl = 'https://raw.githubusercontent.com/nagyesta/cache-only/main/LICENSE'
    maintainerId = 'nagyesta'
    maintainerName = 'Istvan Zoltan Nagy'
    maintainerUrl = 'https://github.com/nagyesta/'
    scmConnection = 'scm:git:https://github.com/nagyesta/cache-only.git'
    scmProjectUrl = 'https://github.com/nagyesta/cache-only/'
}

versioner {
    startFrom {
        major = 0
        minor = 0
        patch = 1
    }
    match {
        major = '{major}'
        minor = '{minor}'
        patch = '{patch}'
    }
    pattern {
        pattern = "%M.%m.%p"
    }
    git {
        authentication {
            https {
                token = project.ext.gitToken
            }
        }
    }
    tag {
        prefix = 'v'
        useCommitMessage = true
    }
}

versioner.apply()
sourceCompatibility = '11'

repositories {
    mavenCentral {
        metadataSources {
            mavenPom()
            artifact()
            ignoreGradleMetadataRedirection()
        }
    }
}

java {
    withJavadocJar()
    withSourcesJar()
}

dependencies {
    annotationProcessor libs.lombok
    compileOnly libs.jetbrains.annotations
    testCompileOnly libs.jetbrains.annotations
    implementation libs.slf4j.api
    implementation libs.commons.collections4
    implementation libs.spring.context.support
    testImplementation libs.jupiter.core
    testImplementation libs.mockito.core
    testImplementation libs.spring.test
    testImplementation libs.spring.context.support
    testImplementation libs.logback.classic
}

jacocoTestReport {
    reports {
        xml.required.set(true)
        xml.destination file("$buildDir/reports/jacoco/report.xml")
        csv.required.set(false)
        html.required.set(true)
        html.destination file("$buildDir/reports/jacoco/html")
    }
}


test {
    useJUnitPlatform()
}
test.finalizedBy jacocoTestReport
jacocoTestReport.finalizedBy jacocoTestCoverageVerification

jacoco {
    toolVersion = libs.versions.jacoco.get()
}

jacocoTestCoverageVerification {
    inputs.file(file("${buildDir}/reports/jacoco/report.xml") as String)
    outputs.file(file("${buildDir}/reports/jacoco/jacocoTestCoverageVerification") as String)

    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.8
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.8
            }
            excludes = [
            ]
        }
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.5
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.5
            }
            excludes = [
                    "com.github.nagyesta.cacheonly.raw.BatchServiceCaller",
                    "com.github.nagyesta.cacheonly.transform.NoOpPartialCacheSupport"
            ]
        }
    }
    doLast {
        file("${buildDir}/reports/jacoco/jacocoTestCoverageVerification").write("Passed")
    }
}
jar.dependsOn check

tasks.withType(Checkstyle) {
    configProperties = [base_dir: rootDir.toString(), cache_file: file("${buildDir}/checkstyle/cacheFile")]
    reports {
        xml.required.set(false)
        html.required.set(true)
        html.stylesheet resources.text
                .fromFile(rootProject.file('config/checkstyle/checkstyle-stylesheet.xsl') as String)
    }
}
checkstyle.toolVersion = libs.versions.checkstyle.get()

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/nagyesta/cache-only")
            credentials {
                username = project.ext.gitUser
                password = project.ext.gitToken
            }
        }
        maven {
            name = "ossrh"
            url = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2")
            credentials {
                username = project.ext.ossrhUser
                password = project.ext.ossrhPass
            }
        }
    }
    publications {
        //noinspection GroovyAssignabilityCheck
        mavenJava(MavenPublication) {
            from components.java
            artifactId = "${project.name}"
            pom {
                name = "${project.artifactDisplayName}"
                description = "${project.artifactDescription}"
                url = project.ext.repoUrl
                licenses {
                    license {
                        name = project.ext.licenseName
                        url = project.ext.licenseUrl
                    }
                }
                developers {
                    developer {
                        id = project.ext.maintainerId
                        name = project.ext.maintainerName
                        url = project.ext.maintainerUrl
                    }
                }
                scm {
                    connection = project.ext.scmConnection
                    developerConnection = project.ext.scmConnection
                    url = project.ext.scmProjectUrl
                }
                withXml {
                    asNode().dependencies.'*'.findAll() {
                        it.scope.text() == 'runtime'
                    }.each { it.scope*.value = 'compile' }
                }
            }
        }
    }
}

//Disable metadata publishing and rely on Maven only
tasks.withType(GenerateModuleMetadata) {
    enabled = false
}

ossIndexAudit {
    username = rootProject.ext.ossIndexUser
    password = rootProject.ext.ossIndexPass
    printBanner = false
    colorEnabled = true
    showAll = false
    dependencyGraph = true
}

signing {
    sign publishing.publications.mavenJava
}
